fix: form gridlayout issue

--- a/src/app/permits/views/form-tab/form-tab.scss
+++ b/src/app/permits/views/form-tab/form-tab.scss
@@ -34,10 +34,6 @@ p {
   font-weight: unset;
 }
 
-.mat-grid-tile .mat-figure {
-  justify-content: start;
-}
-
 .maximize-width {
   width: -webkit-fill-available;
 }
